// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox Checkbox - disabled 1`] = `
<div
  className="sdc-checkbox "
>
  <label>
    <input
      checked={false}
      className="sdc-checkbox__input"
      data-test-id={undefined}
      disabled={true}
      name={undefined}
      onChange={[Function]}
      type="checkbox"
      value={undefined}
    />
    <span
      className="sdc-checkbox__label"
    >
      This is the checkbox label
    </span>
  </label>
</div>
`;

exports[`Checkbox Checkbox - unchecked 1`] = `
<div
  className="sdc-checkbox "
>
  <label>
    <input
      checked={false}
      className="sdc-checkbox__input"
      data-test-id={undefined}
      disabled={undefined}
      name={undefined}
      onChange={[Function]}
      type="checkbox"
      value={undefined}
    />
    <span
      className="sdc-checkbox__label"
    >
      This is the checkbox label
    </span>
  </label>
</div>
`;
